--- a/themes/sgsc/sass/_about-child.scss
+++ b/themes/sgsc/sass/_about-child.scss
@@ -1,6 +1,7 @@
 .page-template-page-about-sub {
   .site-content {
-    width: 100%
+    width: 100%;
+    margin: auto;
   }
   .entry-header {
     height: 17rem;
@@ -14,7 +15,7 @@
   .entry-title {
     position: absolute;
     bottom: 0;
-    height: 7rem;
+    height: 118px;
     background-color: $orange;
     display: flex;
     align-items: center;
@@ -23,7 +24,7 @@
     width: 100%;
   }
   .entry-content {
-    padding: 0 1.3rem;
+    padding: 0 22px;
     p {
       font-size: 1rem;
     }
@@ -37,12 +38,11 @@
 @media screen and (min-width:480px) {
   .page-template-page-about-sub {
     .site-content {
-      width: 1024px;
-      margin: auto;
+      width: 768px;
     }
     .entry-title {
-      height: 10rem;
-      bottom: -10rem;
+      height: 7.5rem;
+      bottom: -7.5rem;
     }
     .entry-header {
       height: 22rem;
@@ -50,6 +50,32 @@
         height: 22rem;
         width: 100%;
       }
+    }
+    .content-area {
+      margin-top: 7.5rem;
+      p {
+        font-size: 1rem;
+      }
+      h5 {
+        margin: 0;
+      }
+      ul {
+        font-size: 1rem;
+      }
+    }
+    .entry-content {
+      padding: 0 52px;
+    }
+  }
+}
+@media screen and (min-width:769px) {
+  .page-template-page-about-sub {
+    .site-content {
+      width: 1024px;
+    }
+    .entry-title {
+      height: 10rem;
+      bottom: -10rem;
     }
     .content-area {
       margin-top: 10rem;
