--- a/themes/sgsc/sass/_footer.scss
+++ b/themes/sgsc/sass/_footer.scss
@@ -151,15 +151,16 @@ span.wpcf7-not-valid-tip {
 .textwidget {
 	width: 125px;
 	font-family: $font__body;
-	font-size: 12px;
-			& a:hover{
-			color: $orange;
+  font-size: 12px;
+  a {
+    color: black;
+    font-weight: 300;
+    text-decoration: none;
+    font-size: 1rem
+  }
+  & a:hover{
+  color: $orange;
 	}
-}
-.textwidget a {
-	color: black;
-	font-weight: 300;
-	text-decoration: none;
 }
 .textwidget :last-child {
 	margin-bottom: 0;
@@ -215,10 +216,13 @@ span.wpcf7-not-valid-tip {
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
-		min-width: 526px;
+    min-width: 526px;
+    a {
+      font-size: 18px;
+    }
 		p {
       width: 175px;
-      font-size: $font_t-footer;
+      font-size: 1rem;
       margin: 0;
 		}
 	}
