--- a/themes/sgsc/sass/_home.scss
+++ b/themes/sgsc/sass/_home.scss
@@ -34,7 +34,7 @@
     }
 }
 
-.entry-header {
+.page-id-11 .entry-header {
     width: 100%;
     height: 321px;
     display: flex;
@@ -44,7 +44,7 @@
     align-items: center;
     margin-top: 32px;
 }
-.entry-title {
+.page-id-11 .entry-title {
     z-index: 1;
     height: 100%;
     width: 100%;
