--- a/themes/sgsc/sass/_navigation.scss
+++ b/themes/sgsc/sass/_navigation.scss
@@ -119,13 +119,13 @@ a {
 .menu {
 	display: flex;
 	justify-content: space-between;
-	width: 100vw;
-}
-
-.menu {
+	width: 100%;
 	justify-content: flex-end;
 	align-items: flex-end;
 	height: 60px;
+	@media screen and (max-width: $tablet_width){
+		width: initial;
+	}
 }
 
 .comment-navigation,
@@ -199,7 +199,7 @@ a {
 	border-radius: 0;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: $tablet_width) {
 	.menu-toggle {
 		display: none;
 	}
