--- a/themes/sgsc/sass/_404.scss
+++ b/themes/sgsc/sass/_404.scss
@@ -16,15 +16,26 @@
       }
     }
     @media screen and (min-width: $mobile_width) {
+      width: 100vw;
+    }
+    @media screen and (min-width: $tablet_width) {
       width: $d_width;
     }
   }
 }
 
+.page-header {
+  @include m-donate;
+  .entry-meta {
+    display: none;
+  }
+}
+
 .error-404 {
-  margin: $margin-d;
+  width: 100%;
   h1 {
-    color: $orange;
+    color: $black;
+    text-align: center;
   }
 }
 
@@ -38,12 +49,13 @@
 .search-form1 {
   fieldset {
     border-radius: 50px;
-    width: 20rem;
+    min-width: 230px;
+    width: 60%;
     margin: $margin-d;
     @include hover-state {
       border: $orange 1px solid;
     }
-    @media screen and (min-width: $mobile_width) {
+    @media screen and (min-width: $tablet_width) {
       width: 470px;
     }
     .search-field1 {
