--- a/themes/sgsc/sass/_search.scss
+++ b/themes/sgsc/sass/_search.scss
@@ -10,13 +10,20 @@
   }
   .site-main {
     display: flex;
+    justify-content: center;
     width: 100%;
     flex-flow: column nowrap;
-
     @media screen and (min-width: $mobile_width) {
+      width: 100vw;
+    }
+    @media screen and (min-width: $tablet_width) {
       width: $d_width;
     }
   }
+}
+
+.entry-title {
+  text-align: center;
 }
 
 .search {
@@ -29,8 +36,9 @@
     a {
       color: $black;
       text-decoration: none;
+      text-align: center;
       @include hover-state {
-        color: $orange;
+        color: $white;
       }
     }
   }
@@ -39,9 +47,11 @@
   }
   #search-results {
     padding: 1rem 1rem 0 1rem;
+    margin: 1rem 0;
+    width: 90%;
   }
   article {
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid rgb(155, 152, 152);
     padding-bottom: 2rem;
   }
 }
